# youtube-playlist-to-obsidian-cards

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py  fetch.py  parser.py  utils.py
